Defining my-blog element and using Polymer mixin to import server address.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Charlie's Blog</title>
+  <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+  <link rel="import" href="elements/my-blog.html">
+</head>
+<body>
+  <my-blog></my-blog>
+</body>
+</html>
