--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <title>Charlie's Blog</title>
   <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
   <link rel="import" href="elements/my-blog.html">
+  <link rel="import" href="/bower_components/app-router/app-router.html">
 </head>
 <body>
-  <my-blog></my-blog>
+  <app-router>
+    <app-route path="/" import="/elements/my-blog.html"></app-route>
+    <app-route path="/admin" import="/elements/firebase-login.html"></app-route>
+  </app-router>
 </body>
 </html>
