--- a/elements/my-blog.html
+++ b/elements/my-blog.html
@@ -2,16 +2,19 @@
 <link rel="import" href="firebase-address.html">
 <link rel="import" href="firebase-login.html">
 <link rel="import" href="posts-list.html">
-<link rel="import" href="../bower_components/pushstate-anchor/pushstate-anchor.html">
 
-<polymer-element name="my-blog">
+<polymer-element
+  name="my-blog"
+  attributes="router"
+>
 
   <template>
-    <a is="pushstate-anchor" href="/admin">Go To Admin</a>
+    <a href="#/admin">Go To Admin</a>
     <firebase-login
       provider="google"
       firebaseAddress="{{address}}"
       firebaseRef="{{firebaseRef}}"
+      router="{{router}}"
     >
     </firebase-login>
     <posts-list
@@ -23,6 +26,7 @@
   <script>
     Polymer(Polymer.mixin({
       ready: function() {
+        
       }
     }, server));
   </script>
