Adding and using blog-post element

--- a/elements/blog-layout.html
+++ b/elements/blog-layout.html
@@ -31,9 +31,7 @@
           </paper-tab>
         </paper-tabs>
       </core-toolbar>
-      <div>
-        <sample-content size="100"></sample-content>
-      </div>
+      <content></content>
     </core-scroll-header-panel>
     <style>
       :host {
