--- a/elements/blog-layout.html
+++ b/elements/blog-layout.html
@@ -1,63 +1,27 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/core-scroll-header-panel/core-scroll-header-panel.html">
-<link rel="import" href="../bower_components/core-scroll-header-panel/demos/sample-content.html">
-<link rel="import" href="../bower_components/core-toolbar/core-toolbar.html">
-<link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
-<link rel="import" href="../bower_components/paper-tabs/paper-tab.html">
+<link rel="import" href="../bower_components/core-scaffold/core-scaffold.html">
 
 <polymer-element name="blog-layout">
 
   <template>
-    <core-scroll-header-panel
-      condenses
-      flex
-      keepCondensedHeader="true"
-      condensedHeaderHeight="100px"
-    >
-      <core-toolbar class="tall">
-        <div flex>
-          <span>header</span>
-        </div>
-        <paper-tabs selected="0" class="bottom fit">
-          <paper-tab>
-            <a href="#/" horizontal layout center-center>
-              Posts
-            </a>
-          </paper-tab>
-          <paper-tab>
-            <a href="#/admin" horizontal layout center-center>
-              About Me
-            </a>
-          </paper-tab>
-        </paper-tabs>
-      </core-toolbar>
-      <content></content>
-    </core-scroll-header-panel>
+    <core-scaffold>
+      <core-header-panel navigation flex mode="seamed">
+        <core-toolbar>Application</core-toolbar>
+        <core-menu theme="core-light-theme">
+          <core-item icon="settings" label="item1"></core-item>
+          <core-item icon="settings" label="item2"></core-item>
+        </core-menu>
+      </core-header-panel>
+      <div tool>Title</div>
+      <div>Main content goes here...</div>
+    </core-scaffold>
     <style>
       :host {
         height: 100%;
       }
 
-      /* background for toolbar when it is at its full size */
-      core-scroll-header-panel::shadow #headerBg {
-        background-color: red;
-      }
-
-      /* background for toolbar when it is condensed */
-      core-scroll-header-panel::shadow #condensedHeaderBg {
-        background-color: #f4b400;
-      }
-
-      core-toolbar {
-        background: transparent;
-      }
-
       a {
         text-decoration: none;
-      }
-
-      paper-tabs {
-        height: 30px;
       }
     </style>
   </template>
