Adding cross-fade transition between routes

--- a/elements/blog-layout.html
+++ b/elements/blog-layout.html
@@ -31,6 +31,10 @@
       a {
         text-decoration: none;
       }
+
+      content::content app-route {
+        padding: 20px;
+      }
     </style>
   </template>
   <script>
