Using RobotoDraft font

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Charlie's Blog</title>
   <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+  <link rel="import" href="bower_components/font-roboto/roboto.html">
   <link rel="import" href="bower_components/core-animated-pages/core-animated-pages.html">
   <link rel="import" href="bower_components/app-router/app-router.html">
   <link rel="import" href="elements/post-form.html">
@@ -22,4 +23,9 @@
     </app-router>
   </blog-layout>
 </body>
+<style>
+  html,body {
+    font-family: 'RobotoDraft', sans-serif;
+  }
+</style>
 </html>
