--- a/elements/post-form.html
+++ b/elements/post-form.html
@@ -2,11 +2,13 @@
 <link rel="import" href="../bower_components/paper-input/paper-autogrow-textarea.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="firebase-ref.html">
+<link rel="import" href="firebase-login.html">
 
 <polymer-element
   name="post-form"
 >
   <template>
+    <firebase-login provider="google" firebaseRef="{{firebaseRef}}"></firebase-login>
     <firebase-ref firebaseRef="{{firebaseRef}}"></firebase-ref>
     <div>Post Form</div>
     <paper-autogrow-textarea
