Setting default font-size

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   </blog-layout>
 </body>
 <style>
+  body {
+    font-size: 16px;
+  }
+
   html,body {
     font-family: 'RobotoDraft', sans-serif;
   }
