Including createdAtDate when adding new posts

--- a/elements/post-form.html
+++ b/elements/post-form.html
@@ -60,6 +60,7 @@
         this.post = {};
       },
       addPost: function() {
+        this.post.createdAtDate = new Date().valueOf();
         this.firebaseRef.child('posts').push(this.post);
       }
     });
