--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="import" href="elements/firebase-login.html">
   <link rel="import" href="elements/blog-layout.html">
   <link rel="import" href="elements/about-me.html">
+  <link rel="import" href="elements/post.html">
 </head>
 <body fullbleed vertical layout>
   <blog-layout vertical layout flex>
@@ -19,6 +20,7 @@
       <app-route path="/about-me" element="about-me"></app-route>
       <app-route path="/admin" element="firebase-login"></app-route>
       <app-route path="/\/add-post.*/" regex element="post-form"></app-route>
+      <app-route path="/posts/:postId" element="post-card"></app-route>
       <app-route path="*" redirect="/"></app-route>
     </app-router>
   </blog-layout>
